@startuml

title __SLIDESHOW's Class Diagram__\n

  namespace com.fahadali.intranet {
    namespace fragments.ui.slideshow {
      class com.fahadali.intranet.fragments.ui.slideshow.SlideshowFragment {
          + onCreateView()
      }
    }
  }
  

  namespace com.fahadali.intranet {
    namespace fragments.ui.slideshow {
      class com.fahadali.intranet.fragments.ui.slideshow.SlideshowViewModel {
          - mText : MutableLiveData<String>
          + SlideshowViewModel()
          + getText()
      }
    }
  }
  

  com.fahadali.intranet.fragments.ui.slideshow.SlideshowFragment -up-|> androidx.fragment.app.Fragment
  com.fahadali.intranet.fragments.ui.slideshow.SlideshowFragment o-- com.fahadali.intranet.fragments.ui.slideshow.SlideshowViewModel : slideshowViewModel
  com.fahadali.intranet.fragments.ui.slideshow.SlideshowViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
